ckanext/datavic_odp_theme/grunt/sass/_form.scss
$rpl-form-label-ruleset: ('l', 1.2em, 'medium') !default;
$rpl-form-text-ruleset: ('xs', 1.3em, 'regular') !default;
$rpl-form-help-ruleset: ('xs', 1em, 'medium') !default;
$rpl-form-required-ruleset: ('xs', .8em, 'regular') !default;
$rpl-form-required-color: rpl-color('danger') !default;
$rpl-form-required-message: ' (Required)' !default;
$rpl-form-element-bg-color: rpl-color('light_neutral') !default;
$rpl-form-element-border-color: rpl-color('mid_neutral_1') !default;
$rpl-form-element-border-color-focus: rpl-color('primary') !default;
$rpl-form-element-border-radius: rem(4px) !default;
$rpl-form-element-text-color: rpl-color('extra_dark_neutral') !default;
$rpl-form-element-text-highlighted: rpl-color('secondary') !default;
$rpl-form-element-text-ruleset: ('xs', 1em, 'regular');
$rpl-form-element-padding-s-horizontal: $rpl-space-4;
$rpl-form-element-padding-m-horizontal: $rpl-space * 5;
$rpl-form-element-padding-s: $rpl-space-4 !default;
$rpl-form-element-padding-m: $rpl-space-4 $rpl-form-element-padding-m-horizontal !default;
$rpl-form-element-margin-bottom-s: $rpl-space-4 !default;
$rpl-form-element-margin-bottom-m: $rpl-space * 7 !default;
$rpl-form-textarea-height-s: rem(180px) !default;
$rpl-form-textarea-height-m: rem(75px) !default;

@mixin rpl_form_text {
  @include rpl_typography_ruleset($rpl-form-element-text-ruleset);
  color: $rpl-form-element-text-color;
}

@mixin rpl_form_text_element {
  background-color: $rpl-form-element-bg-color;
  border: 1px solid $rpl-form-element-border-color;
  border-radius: $rpl-form-element-border-radius;
  box-sizing: border-box;
  color: $rpl-form-element-text-color;
  height: auto;
  width: 100%;
  padding: $rpl-form-element-padding-s;
  margin: 0;

  @include rpl_breakpoint(m) {
    padding: $rpl-form-element-padding-m;
  }

  &:focus {
    border-color: $rpl-form-element-border-color-focus;
  }
}

@mixin rpl_from_element_error {
  border-color: rpl-color('danger');
  background-color: $rpl-danger-bg-color;
}


.stages {
    li {
        $green: #438240;
        &.last {
            right: 0px;
        }

        .highlight {
            color: #6B6B6B;
        }
        &.active {
            &:before {
                color: $green;
            }
            &:after {
                border-top-color: $green;
                border-bottom-color: $green;
            }

            .highlight {
                background: $green;
            }
        }
        &.complete {
            &:before {
                color: darken($green, 5);
            }
            .highlight {
                background: darken($green, 5);
            }
        }

    }
}

.control-required {
    color: #B15D5F;
}

.editor {
    .editor-info-block {
        a {
            color: #187491;
        }
    }
}

.primary {
    form {
        .info-block {
            color: #757575;
        }
    }
}

.error-block {
    background: #DD3134;
}
.btn-warning, .btn-danger {
    &, &:focus, &:hover, &:active {
        color: #000;
    }
}

.form-actions {
    overflow: hidden;
    align-items: center;
    flex-wrap: nowrap;
    gap: 10px;
}

select.form-control {
    appearance: auto;
}

.dataset-form {
    .form-label[for="field-update_frequency"] {
        margin-bottom: 0;
    }
}

// hide URL button for upload widget
.organization-edit {
    .image-upload {
        .btn[title*="Link to a URL"] {
            display: none !important;
        }
    }
}

